--- a/stylesheets/main_stylesheet.css
+++ b/stylesheets/main_stylesheet.css
@@ -2,3 +2,13 @@ body {
     background-color: #2c2c2c;
     color: #e2e2e2;
 }
+
+h1 {
+    text-align: center;
+    padding: 50px 0px 100px 0px;
+}
+
+p {
+    text-align: left;
+    padding: 10px 500px;
+}
