--- a/stylesheets/main_stylesheet.css
+++ b/stylesheets/main_stylesheet.css
@@ -1,14 +1,30 @@
 body {
-    background-color: #2c2c2c;
+    background-color: #555;
     color: #e2e2e2;
 }
 
 h1 {
     text-align: center;
-    padding: 50px 0px 100px 0px;
 }
 
 p {
     text-align: left;
-    padding: 10px 500px;
+}
+
+.terminal {
+    background-color: rgba(50, 50, 50, 0.7);
+    width: 400px;
+    min-height: 260px;
+    border-radius: 4px;
+    border: solid 4px #2c2c2c;
+    font-family: monospace;
+    font-size: 16px;
+}
+
+.topbar {
+    background-color: #2c2c2c;
+}
+
+.terminal p {
+    padding: 5px;
 }
