--- a/stylesheets/main_stylesheet.css
+++ b/stylesheets/main_stylesheet.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+
 body {
     background-color: #555;
     color: #e2e2e2;
@@ -17,7 +19,7 @@ p {
     min-height: 260px;
     border-radius: 4px;
     border: solid 4px #2c2c2c;
-    font-family: monospace;
+    font-family: "Inconsolata";
     font-size: 16px;
 }
 
