--- a/stylesheets/main_stylesheet.css
+++ b/stylesheets/main_stylesheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata|Noto+Sans');
 
 body {
     background-color: #555;
@@ -6,21 +6,20 @@ body {
 }
 
 h1 {
-    text-align: center;
-}
-
-p {
-    text-align: left;
+    font-family: "Noto Sans";
+    font-size: 40;
+    margin: 5px 10px 30px 10px;
 }
 
 .terminal {
     background-color: rgba(50, 50, 50, 0.7);
-    width: 400px;
-    min-height: 260px;
+    width: 50%;
+    min-height: 400px;
     border-radius: 4px;
     border: solid 4px #2c2c2c;
     font-family: "Inconsolata";
-    font-size: 16px;
+    font-size: 20px;
+    margin: auto;
 }
 
 .topbar {
