--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -180,7 +180,7 @@
 }
 
 .page-heading {
-  @include relative-font-size(1.25);
+  @include relative-font-size(2);
 }
 
 .post-list {
@@ -199,7 +199,7 @@
 
 .post-link {
   display: block;
-  @include relative-font-size(1.5);
+  @include relative-font-size(1.25);
 }
 
 
@@ -219,6 +219,16 @@
   @include media-query($on-laptop) {
     @include relative-font-size(2.25);
   }
+}
+
+.post-image {
+    overflow: hidden;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: 100px;
+    padding-bottom: 20px;
 }
 
 .post-content {
