--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,16 +9,14 @@ layout: default
   {{ content }}
 
   <ul class="post-list">
-    {% for post in site.posts %}
+    {% for post in site.posts limit: 3 %}
       <li>
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <a class="post-link" href="{{ post.url | relative_url }}">        
-          <img class="post-preview-img" src="{{ site.url }}{{ post.image }}" alt="{{ post.title | escape }} Preview">
-          <h3>
-            {{ post.title | escape }}
-          </h3>
+        <a class="post-link" href="{{ post.url | relative_url }}">
+          <h3>{{ post.title | escape }}</h3>
         </a>
+        {{ post.excerpt }}
+        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+        <span class="post-meta">{{ post.date | date: date_format }}</span>        
       </li>
     {% endfor %}
   </ul>
