--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,20 +4,37 @@ layout: default
 
 <div class="home">
 
+  <h1 class="page-heading">Portfolio Projects</h1>
+
+  <ul class="post-list">
+    {% assign portfolio_reverse = site.portfolio | reverse %}
+    {% for post in portfolio_reverse limit: 3 %}
+    <li>
+      <div class="post-clickable" onclick="location.href='{{ post.url | relative_url }}';">
+        <h2>{{ post.title | escape }}</h2>
+        {{ post.excerpt }}
+        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+        <span class="post-meta">{{ post.date | date: date_format }}</span>
+      </div>
+    </li>
+    {% endfor %}
+  </ul>
+
   <h1 class="page-heading">Posts</h1>
   
   {{ content }}
 
   <ul class="post-list">
-    {% for post in site.posts limit: 3 %}
-      <li>
-        <a class="post-link" href="{{ post.url | relative_url }}">
-          <h3>{{ post.title | escape }}</h3>
-        </a>
+    {% assign posts_reverse = site.posts | reverse %}
+    {% for post in posts_reverse limit: 3 %}
+    <li>
+      <div class="post-clickable" onclick="location.href='{{ post.url | relative_url }}';">
+        <h2>{{ post.title | escape }}</h2>
         {{ post.excerpt }}
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>        
-      </li>
+        <span class="post-meta">{{ post.date | date: date_format }}</span>
+      </div>
+    </li>
     {% endfor %}
   </ul>
 
