--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,8 +1,10 @@
+@import "fonts";
+
 @charset "utf-8";
 
 // Define defaults for each variable.
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$base-font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
@@ -10,7 +12,7 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
+$text-color:       #424242 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
