--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -7,7 +7,8 @@ layout: default
   {{ content }}
 
   <ul class="post-list">
-    {% for post in site.posts %}
+    {% assign post_reverse = site.posts | reverse %}
+    {% for post in post_reverse %}
       <li>
         <a class="post-link" href="{{ post.url | relative_url }}">
           <h3>{{ post.title | escape }}</h3>
