Making posts a blog

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ layout: default
     {% endfor %}
   </ul>
 
-  <h1 class="page-heading">Posts</h1>
+  <h1 class="page-heading">Blog</h1>
   
   {{ content }}
 
