--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -198,13 +198,13 @@
 }
 
 .post-clickable {
-    @include relative-font-size(1);
-    -webkit-transition: all 0.1s ease;
-    transition: all 0.1s ease;
+    padding: 25px 50px 25px 50px;
 }
 
 .post-clickable:hover {
-    @include relative-font-size(1.1);
+    box-shadow: 0 6px 6px 6px rgba(0,0,0,.2), 0 6px 6px 0 rgba(0,0,0,.14), 0 6px 6px 0 rgba(0,0,0,.12) !important;
+    transform: translate3d(0,0,0);
+    transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
     cursor: pointer;
 }
 
