--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,6 +4,8 @@ layout: default
 
 <div class="portfolio">
 
+  <h1 class="page-heading">{{ page.title | escape }}</h1>
+
   {{ content }}
 
   <ul class="post-list">
