--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -180,7 +180,15 @@
 }
 
 .page-heading {
-    @include relative-font-size(2);
+    @include relative-font-size(2.625);
+    letter-spacing: -1px;
+    line-height: 1;
+
+    padding: 0px 0px 20px 0px;
+
+    @include media-query($on-laptop) {
+        @include relative-font-size(2.25);
+    }
 }
 
 .post-list {
@@ -198,11 +206,12 @@
 }
 
 .post-clickable {
-    padding: 25px 50px 25px 50px;
+    padding: 10px 10px 10px 10px;
+    margin: 0px -10px 0px -10px;
 }
 
 .post-clickable:hover {
-    box-shadow: 0 6px 6px 6px rgba(0,0,0,.2), 0 6px 6px 0 rgba(0,0,0,.14), 0 6px 6px 0 rgba(0,0,0,.12) !important;
+    box-shadow: 0 8px 8px 8px rgba(0,0,0,.2), 0 8px 8px 0 rgba(0,0,0,.14), 0 8px 8px 0 rgba(0,0,0,.12) !important;
     transform: translate3d(0,0,0);
     transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
     cursor: pointer;
