--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -184,7 +184,7 @@
     letter-spacing: -1px;
     line-height: 1;
 
-    padding: 0px 0px 20px 0px;
+    margin: 0px 0px 20px 0px;
 
     @include media-query($on-laptop) {
         @include relative-font-size(2.25);
