--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
+<html lang="en">
   {% include head.html %}
-
   <body>
-
     {% include header.html %}
-
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
-
+    {% include particle.html %}
+    <section id="about">
+      {% include about.html %}
+    </section>
+    <section id="projects">
+      {% include projects.html %}
+    </section>
+    {{ content }}
     {% include footer.html %}
-
   </body>
-
 </html>
