--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
   {% include head.html %}
+
   <body>
+
     {% include header.html %}
-    {% include particle.html %}
-    <section id="about">
-      {% include about.html %}
-    </section>
-    <section id="projects">
-      {% include projects.html %}
-    </section>
-    {{ content }}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+
     {% include footer.html %}
+
   </body>
 </html>
