--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
   <p>&copy; {{site.username}}</p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="/assets/js/sweet-scroll.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="{{ "assets/js/sweet-scroll.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "assets/js/main.js" | prepend: site.baseurl }}"></script>
 {% include google-analytics.html %}
