--- a/_includes/particle.html
+++ b/_includes/particle.html
@@ -5,10 +5,10 @@
       <span class="site-description">{{site.user_title}}</span>
     </h1>
     <div class="header-icons">
-      <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
-      <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-      <a aria-label="My Linkedin" target="_blank" href="#"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
-      <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github" aria-hidden="true"></i></a>
+      <a aria-label="Send email" href="{{ site.email }}"><i class="icon fa fa-envelope"></i></a>
+      <a aria-label="My Twitter" target="_blank" href="https://twitter.com{{ site.twitter_username }}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+      <a aria-label="My Linkedin" target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
+      <a aria-label="My Github" target="_blank" href="https://github.com/{{ site.github_username }}"><i class="icon fa fa-github" aria-hidden="true"></i></a>
     </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
