--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,33 @@
 <div class="user-details">
-  <h1> Featured Projects </h1>
+  <h2 class="main-header"> Featured Projects </h2>
 </div>
+{% assign proj_reverse = site.portfolio | reverse %}
+{% for project in proj_reverse limit: 3 %}
 <div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
-  </div>
-</div>
-<div class="user-projects">
+  {% assign index = forloop.index | modulo: 2 %}
+  {% if index == 0 %}
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+  {% else %}
+  <div class="images-right">
+  {% endif %}
+    <img alt="project_image" src="{{ project.image | prepend: site.baseurl }}" />
   </div>
+  {% if index == 0 %}
   <div class="contents-right">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
+  {% else %}
+  <div class="contents">
+  {% endif %}
+  <h3 class="project-title">{{ project.title | escape }}</h3>
+  {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+  <span class="post-meta">{{ project.date | date: date_format }}</span>
+    <p>
+      {{ project.excerpt | strip_html }}
+    </p>
+    <ul class="project-buttons">
+      <li><a class="project-link" href="{{ project.permalink }}">Blog post</a></li>
+      <li><a class="project-link" target="_blank" href="http://github.com/{{ site.github_username }}/{{ project.github }}">Github</a></li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
+{% endfor %}
+<a class="project-link project-center" href="">All projects</a>
