--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,10 +4,12 @@
 
 @import 'vars';
 @import 'base';
+@import 'util';
 @import 'animation';
 @import 'header';
 @import 'about';
 @import 'projects';
 @import 'footer';
 @import 'nav_bar';
-@import 'util';
+@import 'post';
+@import 'syntax';
