--- a/src/styles/_nav_bar.scss
+++ b/src/styles/_nav_bar.scss
@@ -1,8 +1,16 @@
-.site-header {
+.main-site-header {
     left: 20%;
     width: 60%;
     position: absolute;
-    padding-top: 50px;
+    margin-top: 50px;
+}
+
+.site-header {
+    min-height: $spacing-unit * 1.865;
+
+    // Positioning context for the mobile navigation icon
+    position: relative;
+    background-color: $main;
 }
 
 .site-title {
@@ -11,19 +19,19 @@
 
 #ymh_logo {
     position: absolute;
-    height: 96px;
-    width: 96px;
+    height: 54px;
+    width: 54px;
     margin: 0 auto;
 }
 
 #ymh_logo img {
     position: absolute;
     left: 0;
-    -webkit-transition: opacity .5s ease-in-out;
-    -moz-transition: opacity .5s ease-in-out;
-    -o-transition: opacity .5s ease-in-out;
-    transition: opacity .5s ease-in-out;
-    width: 96px;
+    -webkit-transition: opacity .3s ease-in-out;
+    -moz-transition: opacity .3s ease-in-out;
+    -o-transition: opacity .3s ease-in-out;
+    transition: opacity .3s ease-in-out;
+    width: 54px;
     height: auto;
     cursor: pointer;
 }
@@ -52,11 +60,17 @@
         @include relative-font-size(1.25);
         font-weight: bold;
         text-align: center;
+        padding: 10px 10px 10px 10px;
 
         // Gaps between nav items, but not on the last one
         &:not(:last-child) {
-            margin-right: 20px;
+            margin-right: 30px;
         }
+    }
+
+    a:hover {
+        color: $ternary-color;
+        transition: color .3s
     }
 
     @include media-query($on-palm) {
