--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -28,6 +28,8 @@ $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
+$brand-color: $lighter-main-color;
+
 // Width of the content area
 $content-width:    800px !default;
 
