Fixing issue with loading css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header class="site-header">
   <div id="ymh_logo">
-    <a href="{{ "" | prepend: site.baseurl }}" >
-      <img class="top" src="{{ "assets/img/logos/ymh_green.png" | prepend: site.baseurl }}" />
-      <img class="bottom" src="{{ "assets/img/logos/ymh_white.png" | prepend: site.baseurl }}" />
+    <a href="/" >
+      <img class="top" src="/assets/img/logos/ymh_green.png" />
+      <img class="bottom" src="/assets/img/logos/ymh_white.png" />
     </a>
   </div>
   <nav class="site-nav color" id="nav-bar">
-    <a href="{{ "#about" | prepend: site.baseurl }}" class="link">About Me</a>
-    <a href="{{ "#projects" | prepend: site.baseurl }}" class="link">Projects</a>
+    <a href="/#about" class="link">About Me</a>
+    <a href="/#projects" class="link">Projects</a>
   </nav>
 </header>
