--- a/_includes/main_header.html
+++ b/_includes/main_header.html
@@ -1,8 +1,8 @@
 <header class="main-site-header">
   <div id="ymh_logo">
-    <a href="{{ "/" | prepend: site.base_url }}">
-      <img class="top" src="{{ "assets/img/logos/ymh_green.png" | prepend: site.baseurl }}" />
-      <img class="bottom" src="{{ "assets/img/logos/ymh_white.png" | prepend: site.baseurl }}" />
+    <a href="/">
+      <img class="top" src="/assets/img/logos/ymh_green.png" />
+      <img class="bottom" src="/assets/img/logos/ymh_white.png" />
     </a>
   </div>
   <nav class="site-nav transparent" id="nav-bar">
