--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
   {% else %}
   <div class="images-right">
   {% endif %}
-    <img alt="project_image" src="{{ project.image | prepend: site.baseurl }}" />
+    <img alt="project_image" src="{{ project.image }}" />
   </div>
   {% if index == 0 %}
   <div class="contents-right">
