--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,25 @@
 <div class="user-details">
-  <h2 class="main-header">About me</h2>
+  <h2 class="main-header-top">About me</h2>
   <p>{{ site.data.about.user_about }}</p>
+  <h3>Experience</h3>
+  <p>{{ site.data.about.user_experience }}</p>
+
+  <ul class="timeline">
+    {% for company in site.data.about.timeline %}
+    {% assign index = forloop.index | modulo: 2 %}
+    <li>
+      {% if index == 0 %}
+      <div class="direction-r">
+      {% else %}
+      <div class="direction-l">
+      {% endif %}
+        <div class="flag-wrapper">
+          <span class="hexa"></span>
+          <span class="flag">{{ company.company }}</span>
+          <span class="time-wrapper"><span class="time">{{ company.dates }}</span></span>
+        </div>
+        <div class="desc">{{ company.description }}</div>
+      </div>
+    </li>
+    {% endfor %}
 </div>
