--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,14 @@
 <header class="site-header">
-  <div id="ymh_logo">
-    <a href="/" >
-      <img class="top" src="/assets/img/logos/ymh_green.png" />
-      <img class="bottom" src="/assets/img/logos/ymh_white.png" />
-    </a>
+  <div class="site-header-spacing">
+    <div id="ymh_logo">
+      <a href="/" >
+        <img class="top" src="/assets/img/logos/ymh_green.png" />
+        <img class="bottom" src="/assets/img/logos/ymh_white.png" />
+      </a>
+    </div>
+    <nav class="site-nav color" id="nav-bar">
+      <a href="/#about" class="link">About Me</a>
+      <a href="/#projects" class="link">Projects</a>
+    </nav>
   </div>
-  <nav class="site-nav color" id="nav-bar">
-    <a href="/#about" class="link">About Me</a>
-    <a href="/#projects" class="link">Projects</a>
-  </nav>
 </header>
