--- a/src/styles/_nav_bar.scss
+++ b/src/styles/_nav_bar.scss
@@ -13,6 +13,11 @@
     background-color: $main;
 }
 
+.site-header-spacing {
+    margin: 0 auto;
+    max-width: 900px;
+}
+
 .site-title {
     float: left;
 }
