--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -30,6 +30,8 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 
 $brand-color: $lighter-main-color;
 
+$timeline-color: $purple;
+
 // Width of the content area
 $content-width:    800px !default;
 
