--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -73,6 +73,7 @@
     border-radius: 50%;
     border: 2px solid #FFF;
     transition: all .3s;
+    -webkit-transition: all .3s;
     &:hover {
       color: $main;
       background: $ternary-color;
@@ -119,4 +120,40 @@
         color: $sec;
       }
   }
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    opacity: 0;
+    position: absolute;
+    min-width: 150px;
+    margin-top: 0px;
+    z-index: -1;
+    top: 0px;
+    text-align: left;
+    background-color: $main;
+    @include card(2);
+    transition: margin-top .3s, opacity .3s;
+    -webkit-transition: margin-top .3s, opacity .3s;
+}
+
+.main-site-header .dropdown-content {
+    background: transparent;
+    @include card(0);
+}
+
+.dropdown-content a {
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    position: absolute;
+    margin-top: 50px;
+    opacity: 1;
 }
