--- a/src/styles/_nav_bar.scss
+++ b/src/styles/_nav_bar.scss
@@ -1,21 +1,35 @@
 .main-site-header {
-    left: 20%;
-    width: 60%;
+    width: 100%;
     position: absolute;
-    margin-top: 50px;
+    padding-top: 50px;
+    z-index: 100;
+    transition: padding-top .3s;
+    -webkit-transition: padding-top .3s;
 }
 
 .site-header {
     min-height: $spacing-unit * 1.865;
 
     // Positioning context for the mobile navigation icon
-    position: relative;
+    width: 100%;
+    top: 0;
+    position: fixed;
     background-color: $main;
+    z-index: 100;
+    transition: padding-top .3s;
+    -webkit-transition: padding-top .3s;
 }
 
 .site-header-spacing {
     margin: 0 auto;
     max-width: 900px;
+    padding: 0px 50px 0px 50px;
+    transition: all .3s;
+    -webkit-transition: all .3s;
+}
+
+.main-site-header .site-header-spacing {
+    max-width: 1300px;
 }
 
 .site-title {
@@ -27,6 +41,8 @@
     height: 54px;
     width: 54px;
     margin: 0 auto;
+    transition: height .3s, width .3s;
+    -webkit-transition: height .3s, width .3s;
 }
 
 #ymh_logo img {
@@ -35,14 +51,24 @@
     -webkit-transition: opacity .3s ease-in-out;
     -moz-transition: opacity .3s ease-in-out;
     -o-transition: opacity .3s ease-in-out;
-    transition: opacity .3s ease-in-out;
+    transition: opacity .3s ease-in-out, width .3s, height .3s;
     width: 54px;
-    height: auto;
+    height: 54px;
     cursor: pointer;
 }
 
 #ymh_logo img.bottom:hover {
     opacity: 0;
+}
+
+.main-site-header #ymh_logo {
+    height: 96px;
+    width: 96px;
+}
+
+.main-site-header #ymh_logo img {
+    width: 96px;
+    height: 96px;
 }
 
 .site-nav {
@@ -75,7 +101,8 @@
 
     a:hover {
         color: $ternary-color;
-        transition: color .3s
+        transition: color .3s;
+        -webkit-transition: color .3s;
     }
 
     @include media-query($on-palm) {
