Adding post css

--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -30,6 +30,7 @@
     box-shadow: 0 8px 8px 8px rgba(0,0,0,.2), 0 8px 8px 0 rgba(0,0,0,.14), 0 8px 8px 0 rgba(0,0,0,.12) !important;
     transform: translate3d(0,0,0);
     transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
+    -webkit-transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
     cursor: pointer;
 }
 
@@ -45,6 +46,7 @@
 
 .post-title {
     @include relative-font-size(3);
+    padding-top: 50px;
     letter-spacing: -1px;
     line-height: 1;
 
