Small tweaks to html

--- a/_includes/main_header.html
+++ b/_includes/main_header.html
@@ -7,9 +7,9 @@
       </a>
     </div>
     <nav class="site-nav transparent" id="nav-bar">
-      <a href="#about" class="link" data-scroll>About Me</a>
+      <a href="#about" class="link">About Me</a>
       <div class="dropdown">
-        <a href="#projects" class="link dropdown" data-scroll>Projects</a>
+        <a href="#projects" class="link">Projects</a>
         <div class="dropdown-content">
           <a href="{{ "portfolio" | prepend: site.baseurl }}">All Projects</a>
         </div>
