--- a/_includes/particle.html
+++ b/_includes/particle.html
@@ -11,5 +11,5 @@
       <a aria-label="My Github" target="_blank" href="https://github.com/{{ site.github_username }}"><i class="icon fa fa-github" aria-hidden="true"></i></a>
     </div>
   </div>
-  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+  <a class="down" href="#about" id="about-h"><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
