--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <div class="user-details">
   <h2 class="main-header-top">About me</h2>
-  <p>{{ site.data.about.user_about }}</p>
+  <p>{{ site.data.about.user }}</p>
   <h3>Experience</h3>
   <p>{{ site.data.about.user_experience }}</p>
 
