--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,7 @@
   <p>&copy; {{ site.username }}</p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-		crossorigin="anonymous"></script>
-<script src="/assets/js/sweet-scroll.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="{{ "assets/js/scrollto.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "assets/js/main.js" | prepend: site.baseurl }}"></script>
 {% include google-analytics.html %}
