--- a/src/styles/_nav_bar.scss
+++ b/src/styles/_nav_bar.scss
@@ -1,168 +1,214 @@
 .main-site-header {
-    width: 100%;
-    position: absolute;
-    padding-top: 50px;
-    z-index: 100;
-    transition: padding-top .3s;
-    -webkit-transition: padding-top .3s;
+  width: 100%;
+  position: absolute;
+  padding-top: 50px;
+  z-index: 100;
+  transition: padding-top .3s;
+  -webkit-transition: padding-top .3s;
 }
 
 .site-header {
-    min-height: $spacing-unit * 1.865;
+  min-height: 66px;
+  line-height: 66px;
 
-    // Positioning context for the mobile navigation icon
-    width: 100%;
-    top: 0;
-    position: fixed;
-    background-color: $main;
-    z-index: 100;
-    transition: padding-top .3s;
-    -webkit-transition: padding-top .3s;
+  // Positioning context for the mobile navigation icon
+  width: 100%;
+  top: 0;
+  position: fixed;
+  background-color: $main;
+  z-index: 100;
+  transition: padding-top .3s;
+  -webkit-transition: padding-top .3s;
 }
 
 .site-header-spacing {
-    margin: 0 auto;
-    max-width: 900px;
-    padding: 0px 50px 0px 50px;
-    transition: all .3s;
-    -webkit-transition: all .3s;
+  margin: 0 auto;
+  max-width: 900px;
+  padding: 5px 5px 5px 5px;
+  transition: all .3s;
+  -webkit-transition: all .3s;
 }
 
 .main-site-header .site-header-spacing {
-    max-width: 1300px;
+  max-width: 1300px;
 }
 
 .site-title {
-    float: left;
+  float: left;
 }
 
 #ymh_logo {
-    position: absolute;
-    height: 54px;
-    width: 54px;
-    margin: 0 auto;
-    transition: height .3s, width .3s;
-    -webkit-transition: height .3s, width .3s;
+  position: absolute;
+  height: 56px;
+  width: 56px;
+  margin: 0 auto;
+  transition: height .3s, width .3s, left .3s;
+  -webkit-transition: height .3s, width .3s, left .3s;
+
+  @include media-query($on-palm) {
+    left: 5px;
+  }
 }
 
 #ymh_logo img {
-    position: absolute;
-    left: 0;
-    -webkit-transition: opacity .3s ease-in-out;
-    -moz-transition: opacity .3s ease-in-out;
-    -o-transition: opacity .3s ease-in-out;
-    transition: opacity .3s ease-in-out, width .3s, height .3s;
-    width: 54px;
-    height: 54px;
-    cursor: pointer;
+  position: absolute;
+  left: 0;
+  -webkit-transition: opacity .3s ease-in-out;
+  -moz-transition: opacity .3s ease-in-out;
+  -o-transition: opacity .3s ease-in-out;
+  transition: opacity .3s ease-in-out, width .3s, height .3s;
+  cursor: pointer;
 }
 
 #ymh_logo img.bottom:hover {
-    opacity: 0;
+  opacity: 0;
 }
 
 .main-site-header #ymh_logo {
-    height: 96px;
-    width: 96px;
+  height: 96px;
+  width: 96px;
+
+  @include media-query($on-palm) {
+    left: calc(50% - 48px);
+  }
 }
 
-.main-site-header #ymh_logo img {
-    width: 96px;
-    height: 96px;
+.menu {
+  float: right;
+
+  a {
+    color: #fff;
+    text-decoration: none;
+    line-height: $base-line-height;
+    @include relative-font-size(1.25);
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+
+    // Gaps between nav items, but not on the last one
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+
+  a:hover {
+    color: $ternary-color;
+    transition: color .3s;
+    -webkit-transition: color .3s;
+  }
 }
 
-.site-nav {
-    float: right;
+/* BASE */
+html,
+body {
+  height: 100%;
+}
+
+.container {
+  @include clearfix;
+}
+
+.site-content {
+  padding-top: 66px;
+}
+
+#main-site-content  {
+  padding-top: 0;
+}
+
+.site-cache {
+  background-color: rgba(0,0,0,0);
+  transition: background-color 0.3s;
+  z-index: 1000;
+}
+
+@include media-query($on-palm) {
+  .site-pusher,
+  .site-container {
+    height: 100%;
+  }
+
+  .site-container {
+    overflow: hidden;
+    transition: position .3s;
+  }
+
+  .site-pusher {
+    transition-duration: 0.3s;
+    transform: translateX(0px);
+  }
+
+  .site-content {
+    position: absolute;
+    top: 66px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding-top: 0;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .header__icon {
     position: relative;
-    line-height: $base-line-height * $base-font-size * 2.25;
+    display: block;
+    float: right;
+    width: 50px;
+    height: 66px;
 
-    .nav-trigger {
-        display: none;
-    }
+    cursor: pointer;
 
-    .menu-icon {
-        display: none;
+    &:after {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 1rem;
+      height: 0;
+      top: 16px;
+      left: 15px;
+      box-shadow: 0 10px 0 1px #fff, 0 16px 0 1px #fff, 0 22px 0 1px #fff;
     }
+  }
+
+  .menu {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: $main;
+    /*    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;*/
+
+    width: $menu-width;
+    min-height: 100vh;
+    transform: translateX($menu-width);
 
     a {
-        color: #fff;
-        text-decoration: none;
-        line-height: $base-line-height;
-        @include relative-font-size(1.25);
-        font-weight: bold;
-        text-align: center;
-        padding: 10px 10px 10px 10px;
+      background-color: $main;
+      display: block;
+      height: 40px;
+      text-align: center;
+      line-height: 40px;
+      border-bottom: 1px solid lighten($main, 5);
+      @include relative-font-size(1);
 
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 30px;
-        }
+      &:not(:last-child) {
+        margin-right: 0px;
+      }
     }
+  }
 
-    a:hover {
-        color: $ternary-color;
-        transition: color .3s;
-        -webkit-transition: color .3s;
+  .with--sidebar {
+    .site-pusher {
+      transform: translateX(-$menu-width);
     }
-
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        label[for="nav-trigger"] {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 36px;
-            z-index: 2;
-            cursor: pointer;
-        }
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg path {
-                fill: $grey-color-dark;
-            }
-        }
-
-        input ~ .trigger {
-            clear: both;
-            display: none;
-        }
-
-        input:checked ~ .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-            margin-left: 20px;
-        }
+    .site-cache {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.6);
     }
-}
-
-.transparent {
-    background: transparent;
-}
-
-.color {
-    background-color: $main;
+  }
 }
