--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -28,7 +28,7 @@
     display: block;
     line-height: 1;
     color: #FFF;
-    @media only screen and (min-width:$cut){
+    @media only screen and (min-width: $on-palm){
       margin: 0;
       font-size: 100px;
     }
@@ -39,7 +39,7 @@
     line-height: 1;
     color: #FFF;
     margin-top: 10px;
-    @media only screen and (min-width:$cut){
+    @media only screen and (min-width: $on-palm){
       font-size: 40px;
     }
   }
@@ -101,59 +101,81 @@
   font-size: 30px;
   cursor: pointer;
   .icon {
-      position: absolute;
-      -webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      width: 100px;
-      height: 100px;
-      fill: #fff;
-      -webkit-animation: pulse 1.3s infinite;
-      animation: pulse 1.3s infinite;
-      &:hover {
-        color: $sec;
-      }
-      &:active {
-        color: $sec;
-      }
+    position: absolute;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+    fill: #fff;
+    -webkit-animation: pulse 1.3s infinite;
+    animation: pulse 1.3s infinite;
+    &:hover {
+      color: $sec;
+    }
+    &:active {
+      color: $sec;
+    }
   }
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
+
+  @include media-query($on-palm) {
+    position: static;
+    display: inline;
+  }
 }
 
-.dropdown-content {
-    opacity: 0;
-    position: absolute;
-    min-width: 150px;
-    margin-top: 0px;
-    z-index: -1;
-    top: 0px;
-    text-align: left;
-    background-color: $main;
-    @include card(2);
-    transition: margin-top .3s, opacity .3s;
-    -webkit-transition: margin-top .3s, opacity .3s;
+.menu .dropdown-content {
+  opacity: 0;
+  position: absolute;
+  min-width: 150px;
+  margin-top: 0px;
+  z-index: -1;
+  top: 0px;
+  text-align: left;
+  background-color: $main;
+  @include card(2);
+  transition: margin-top .3s, opacity .3s;
+  -webkit-transition: margin-top .3s, opacity .3s;
+
+  @include media-query($on-palm) {
+    opacity: 1;
+    position: static;
+    min-width: 0px;
+    z-index: 0;
+    text-align: center;
+    @include card(0);
+
+    a {
+      @include relative-font-size(0.875);
+      padding: 0;
+      background-color: lighten($main, 3);
+    }
+  }
 }
 
 .main-site-header .dropdown-content {
-    background: transparent;
-    @include card(0);
-}
-
-.dropdown-content a {
-    text-decoration: none;
-    display: block;
+  background: transparent;
+  @include card(0);
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
-    position: absolute;
-    margin-top: 50px;
+  display: block;
+  position: absolute;
+  margin-top: 50px;
+  opacity: 1;
+
+  @include media-query($on-palm) {
+    display: inline;
+    position: static;
+    margin-top: 0px;
     opacity: 1;
+  }
 }
