Fixing post and adding variables

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -32,10 +32,12 @@ $brand-color: $lighter-main-color;
 
 $timeline-color: $purple;
 
+$menu-width: 250px!default;
+
 // Width of the content area
 $content-width:    800px !default;
 
-$on-palm:          600px !default;
+$on-palm:          768px !default;
 $on-laptop:        800px !default;
 
 $spacing-unit:     30px !default;
@@ -91,5 +93,13 @@ $spacing-unit:     30px !default;
     @warn "Invalid $depth `#{$depth}` for mixin `card`.";
   } @else {
     box-shadow: bottom-shadow($depth), top-shadow($depth);  
+  }
+}
+
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
   }
 }
