--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,15 +2,26 @@
 <html lang="en">
   {% include head.html %}
   <body>
-    {% include main_header.html %}
-    {% include particle.html %}
-    <section id="about">
-      {% include about.html %}
-    </section>
-    <section id="projects">
-      {% include projects.html %}
-    </section>
-    {{ content }}
-    {% include footer.html %}
+    <div class="site-container">
+      <div class="site-pusher">
+        <header class="site-header" id="main-header">
+          {% include header.html %}
+        </header>
+        <div class="site-content" id="main-site-content">
+          <div class="container">
+            {% include particle.html %}
+            <section id="about">
+              {% include about.html %}
+            </section>
+            <section id="projects">
+              {% include projects.html %}
+            </section>
+            {{ content }}
+            {% include footer.html %}
+          </div>
+        </div>
+        <div class="site-cache" id="site-cache"></div>
+      </div>
+    </div>
   </body>
 </html>
