--- a/_includes/particle.html
+++ b/_includes/particle.html
@@ -1,4 +1,4 @@
-<div id="particles-js">
+<div id="particles-js" class="container-fluid">
   <div class="header">
     <h1 class="noselect">
       <span class="site-title">{{site.username}}</span>
