--- a/src/styles/_nav_bar.scss
+++ b/src/styles/_nav_bar.scss
@@ -5,6 +5,20 @@
   z-index: 100;
   transition: padding-top .3s;
   -webkit-transition: padding-top .3s;
+
+  @include media-query($on-palm) {
+    min-height: 66px;
+    line-height: 66px;
+
+    // Positioning context for the mobile navigation icon
+    top: 0;
+    position: fixed;
+    background-color: $main;
+    z-index: 100;
+    transition: padding-top .3s;
+    -webkit-transition: padding-top .3s;
+    padding: 0;
+  }
 }
 
 .site-header {
@@ -24,9 +38,13 @@
 .site-header-spacing {
   margin: 0 auto;
   max-width: 900px;
-  padding: 5px 5px 5px 5px;
+  padding: 5px 50px;
   transition: all .3s;
   -webkit-transition: all .3s;
+
+  @include media-query($on-palm) {
+    padding: 5px;
+  }
 }
 
 .main-site-header .site-header-spacing {
@@ -69,7 +87,8 @@
   width: 96px;
 
   @include media-query($on-palm) {
-    left: calc(50% - 48px);
+    height: 56px;
+    width: 56px;
   }
 }
 
@@ -102,10 +121,6 @@
 html,
 body {
   height: 100%;
-}
-
-.container {
-  @include clearfix;
 }
 
 .site-content {
@@ -186,9 +201,7 @@ body {
     a {
       background-color: $main;
       display: block;
-      height: 40px;
       text-align: center;
-      line-height: 40px;
       border-bottom: 1px solid lighten($main, 5);
       @include relative-font-size(1);
 
