Updating blog html

--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,3 +1,27 @@
-<div class="user-details">
-  <h2 class="main-header" id="blog">Blog</h2>
+<!-- Posts section -->
+<div class="blog-c">
+  <div class="container">
+    <h2 class="text-center main-header" id="blog">Blog</h2>
+    <div class="row">
+      {% for post in site.posts limit: 3 %}
+      <div class="col-md-4 col-lg-4 col-sm-12">
+        <div class="card">
+          <div class="card-img">
+            <img src="{{ post.image | prepend: site.baseurl }}" class="img-fluid">
+          </div>
+          
+          <div class="card-body">
+            <h3 class="card-title">{{ post.title }}</h3>
+            <p class="card-text">
+              {{ post.excerpt }}
+            </p>
+          </div>
+          <div class="card-footer">
+            <a href="{{ post.url }}" class="card-link">Read more</a>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
 </div>
