Updating main page with contact and blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,6 @@
   </div>
   <a href="#" class="header__icon" id="header__icon"></a>
   <nav class="menu" id="menu">
-    <a href="{{ "#particles-js" | prepend: site.baseurl }}">Home</a>
     <a href="{{ "#about" | prepend: site.baseurl }}">About Me</a>
     <div class="dropdown">
       <a href="{{ "#projects" | prepend: site.baseurl }}">Projects</a>
@@ -16,5 +15,6 @@
       </div>
     </div>
     <a href="{{ "#blog" | prepend: site.baseurl }}">Blog</a>
+    <a href="{{ "#contact" | prepend: site.baseurl }}">Contact</a>
   </nav>
 </div>
