--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -18,6 +18,9 @@
           <section>
             {% include blog.html %}
           </section>
+          <section>
+            {% include contact.html %}
+          </section>
           {{ content }}
           {% include footer.html %}
         </div>
