--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -10,11 +10,15 @@
 .main-header-top {
     font-size: 2.5rem;
     padding-top: 2em;
+    color: $main;
+    font-weight: 700;
 }
 
 .main-header {
     font-size: 2.5rem;
     padding-top: 1em;
+    color: $main;
+    font-weight: 700;
 }
 
 .tech {
@@ -153,7 +157,7 @@
 .flag {
   position: relative;
   display: inline;
-  background: rgb(255,255,255);
+  background: lighten($background-color, 2);
   font-weight: 600;
   z-index: 15;
   padding: 6px 10px;
@@ -217,7 +221,7 @@
   position: relative;
   margin: 1em 0 0 0;
   padding: 1em;
-  background: rgb(254,254,254);
+  background: lighten($background-color, 2);
   -webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
   -moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
   box-shadow: 0 0 1px rgba(0,0,0,0.20);
@@ -286,7 +290,7 @@
     top: 50%;
     margin-top: -8px;
     border: solid transparent;
-    border-left-color: rgb(254,254,254);
+    border-left-color: lighten($background-color, 2);
     border-width: 8px;
   }
 
@@ -294,7 +298,7 @@
     top: 50%;
     margin-top: -8px;
     border: solid transparent;
-    border-right-color: rgb(254,254,254);
+    border-right-color: lighten($background-color, 2);
     border-width: 8px;
     left: -8px;
   }
