--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -12,23 +12,17 @@ $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
 $main-color: #406e99 !default;
-$lighter-main-color: lighten($main-color, 20%) !default;
-$darker-main-color: #1a232c !default;
-
 $secondary-color: #554099 !default;
-$lighter-secondary-color: lighten($secondary-color, 20%) !default;
-
 $ternary-color: #4dba82 !default;
-$lighter-ternary-color: lighten($ternary-color, 20%) !default;
 
 $text-color:       #424242 !default;
-$background-color: #fdfdfd !default;
+$background-color: lighten($main-color, 55%) !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
-$brand-color: $lighter-main-color;
+$brand-color: lighten($main-color, 20);
 
 $timeline-color: $purple;
 
