--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<div class="contact-form" id="contact">
+<div class="contact-form">
  <div class="container">
   <form action="https://formspree.io/ymherklotz@gmail.com" method="POST">
    <div class="row">
