--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
 <div class="user-details">
-  <h2 class="main-header-top">About me</h2>
+  <h2 class="main-header">About me</h2>
   <p>{{ site.data.about.user }}</p>
   <h3>Experience</h3>
   <p>{{ site.data.about.user_experience }}</p>
