--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,7 +1,7 @@
 <!-- Posts section -->
 <div class="blog-c">
   <div class="container">
-    <h2 class="text-center main-header" id="blog">Blog</h2>
+    <h2 class="text-center main-header">Blog</h2>
     <div class="row">
       {% for post in site.posts limit: 3 %}
       <div class="col-md-4 col-lg-4 col-sm-12">
