--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,4 +1,4 @@
-#about {
+#about-section {
     width: 90%;
     margin: 0 auto;
     max-width: 960px;
@@ -7,16 +7,8 @@
     }
 }
 
-.main-header-top {
-    font-size: 2.5rem;
-    padding-top: 2em;
-    color: $main;
-    font-weight: 700;
-}
-
 .main-header {
     font-size: 2.5rem;
-    padding-top: 1em;
     color: $main;
     font-weight: 700;
 }
