--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -171,3 +171,10 @@ pre {
   display: table;
   clear: both;
 }
+
+a.anchor {
+  display: block;
+  position: relative;
+  top: -66px;
+  visibility: hidden;
+}
