--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,20 @@
 <div class="site-header-spacing">
   <div id="ymh_logo">
-    <a href="{{ "#particles-js" | prepend: site.baseurl }}" id="main-h">
-      <img class="top" src="{{ "assets/img/logos/ymh_green.png" | prepend: site.baseurl }}" />
-      <img class="bottom" src="{{ "assets/img/logos/ymh_white.png" | prepend: site.baseurl }}" />
+    <a href="/#particles-js" id="main-h">
+      <img class="top" src="/assets/img/logos/ymh_green.png" />
+      <img class="bottom" src="/assets/img/logos/ymh_white.png" />
     </a>
   </div>
   <a href="#" class="header__icon" id="header__icon"></a>
   <nav class="menu" id="menu">
-    <a href="{{ "#about" | prepend: site.baseurl }}">About Me</a>
+    <a href="/#about">About Me</a>
     <div class="dropdown">
-      <a href="{{ "#projects" | prepend: site.baseurl }}">Projects</a>
+      <a href="/#projects">Projects</a>
       <div class="dropdown-content">
-        <a href="{{ "portfolio" | prepend: site.baseurl }}">All Projects</a>
+        <a href="/portfolio">All Projects</a>
       </div>
     </div>
-    <a href="{{ "#blog" | prepend: site.baseurl }}">Blog</a>
-    <a href="{{ "#contact" | prepend: site.baseurl }}">Contact</a>
+    <a href="/#blog">Blog</a>
+    <a href="/#contact">Contact</a>
   </nav>
 </div>
