--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -30,4 +30,4 @@
       </div>
     </div>
     {% endfor %}
-    <a class="project-link project-center" href="{{ "portfolio/" | prepend: site.baseurl }}">All projects</a>
+    <a class="project-link project-center" href="/portfolio/">All projects</a>
