--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -11,7 +11,7 @@ layout: default
       <div class="col-lg-4 col-md-4 col-sm-12">
         <div onclick="location.href='{{ project.url }}';" class="parent">
           <div class="img-fluid img">
-            <img src="{{ project.image | prepend: site.baseurl }}">
+            <img src="{{ project.image }}">
           </div>
           <div class="text">
             <p>
