--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -7,7 +7,7 @@
       <div class="col-md-4 col-lg-4 col-sm-12">
         <div class="card">
           <div class="card-img">
-            <img src="{{ post.image | prepend: site.baseurl }}" class="img-fluid">
+            <img src="{{ post.image }}" class="img-fluid">
           </div>
           
           <div class="card-body">
