--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,11 +1,11 @@
 .contact-form{
-  margin: 6em 0;
+  margin: 2em 0;
   position: relative;  
 }
 
 .contact-form h1{
   padding:2em 1px;
-  color: $main; 
+  color: lighten($background-color, 2); 
 }
 .contact-form .right{
   max-width: 600px;
@@ -13,8 +13,8 @@
 .contact-form .right .btn-secondary{
   background: transparent;
   border: 0;
-  color: $main;
-  border: 1px solid $main;
+  color: lighten($background-color, 2);
+  border: 1px solid lighten($background-color, 2);
   border-radius: 10px;
   transition: background 0.3;
   -webkit-transition: background 0.3;
@@ -24,24 +24,24 @@
     background-color: $purple;
     border-color: $purple;
     color: #fff;
-    transition: color 0.3s ease-in,
-                background-color 0.3s ease-in,
-                border-color 0.3s ease-in;
-    -webkit-transition: color 0.3s ease-in,
-                        background-color 0.3s ease-in,
-                        border-color 0.3s ease-in;
+    transition: color 0.1s ease-in,
+                background-color 0.1s ease-in,
+                border-color 0.1s ease-in;
+    -webkit-transition: color 0.1s ease-in,
+                        background-color 0.1s ease-in,
+                        border-color 0.1s ease-in;
   }
 
   &:active {
     background-color: $purple;
     border-color: $purple;
     color: #fff;
-    transition: color 0.3s ease-in,
-                background-color 0.3s ease-in,
-                border-color 0.3s ease-in;
-    -webkit-transition: color 0.3s ease-in,
-                        background-color 0.3s ease-in,
-                        border-color 0.3s ease-in;
+    transition: color 0.1s ease-in,
+                background-color 0.1s ease-in,
+                border-color 0.1s ease-in;
+    -webkit-transition: color 0.1s ease-in,
+                        background-color 0.1s ease-in,
+                        border-color 0.1s ease-in;
   }
 }
 
