--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Noto');
 
 $main: #1a222c;
 $sec: #4B5664;
 $purple: #54516A;
 $cut: 550px;
 
-$base-font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$base-font-family: "Noto", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
@@ -28,7 +28,6 @@ $timeline-color: $purple;
 
 $menu-width: 250px!default;
 
-// Width of the content area
 $content-width:    800px !default;
 
 $on-palm:          768px !default;
@@ -36,13 +35,6 @@ $on-laptop:        800px !default;
 
 $spacing-unit:     30px !default;
 
-// Use media queries like this:
-// @include media-query($on-palm) {
-//   .wrapper {
-//     padding-right: $spacing-unit / 2;
-//     padding-left: $spacing-unit / 2;
-//   }
-// }
 @mixin media-query($device) {
   @media screen and (max-width: $device) {
     @content;
@@ -53,9 +45,6 @@ $spacing-unit:     30px !default;
   font-size: $base-font-size * $ratio;
 }
 
-/// Computes a top-shadow for a card effect.
-/// @param {Number} $depth - depth level
-/// @return {List}
 @function top-shadow($depth) {
   $primary-offset: nth(1.5 3 10 14 19, $depth) * 1px;
   $blur: nth(1.5 3 10 14 19, $depth) * 4px;
@@ -64,9 +53,6 @@ $spacing-unit:     30px !default;
   @return 0 $primary-offset $blur $color;
 }
 
-/// Computes a bottom-shadow for a card effect.
-/// @param {Number} $depth - depth level
-/// @return {List}
 @function bottom-shadow($depth) {
   $primary-offset: nth(1.5 3 6 10 15, $depth) * 1px;
   $blur: nth(1 3 3 5 6, $depth) * 4px;
@@ -75,11 +61,6 @@ $spacing-unit:     30px !default;
   @return 0 $primary-offset $blur $color;
 }
 
-/// Gives a card depth effect.
-/// @param {Number} $depth - depth level (between 1 and 5)
-/// @link http://www.google.com/design/spec/layout/layout-principles.html#layout-principles-dimensionality Google Design
-/// @requires {function} top-shadow
-/// @requires {function} bottom-shadow
 @mixin card($depth) {
   @if $depth < 1 {
     box-shadow: none;
