--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,7 +13,7 @@
          <input type="email" class="form-control form-control-lg" placeholder="YourEmail@email.com" name="Email">
        </div>
        <div class="form-group">
-         <textarea class="form-control form-control-lg" name="Content">
+         <textarea class="form-control form-control-sm" name="Content">
          </textarea>
        </div>
        <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
