--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 <footer class="footer">
+  <a class="anchor" id="contact"></a>
+  {% include contact.html %}
   <p>&copy; {{ site.username }}</p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
